fix scrollbar of the homepage

--- a/src/app/styles/_styles.scss
+++ b/src/app/styles/_styles.scss
@@ -1,12 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
 
-html {
+html, body {
   font-family: 'Muli', sans-serif;
+  height: 100%;
 }
 
 .page {
-  position: fixed;
-  bottom: 0;
   width: 100%;
   height: 100%;
 
